# quantfx-compiler

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run_stac_a2  test_arith.cpp  vwap.ll
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/micro/: bench_compare.py  bench_rolling.cpp
benchmarks/stac/: run_stac_a2.cpp
benchmarks/tick/: TickDataReplay.cpp  TickDataReplay.h  lobster_sample.csv
compiler/: CMakeLists.txt
compiler/backend/: CMakeLists.txt
compiler/backend/gpu/: GPUCodeGen.cpp  GPUCodeGen.h
compiler/frontend/: AST.h  CMakeLists.txt  HIR.cpp  HIR.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
compiler/mlir/: CMakeLists.txt
compiler/mlir/include/qfx/Conversion/: HirToMLIR.h  LowerToLLVM.h  QFXToAffine.h
compiler/mlir/include/qfx/IR/: QFXDialect.h  QFXDialect.td  QFXOps.td
compiler/mlir/include/qfx/Transforms/: CompilerConfig.h  Passes.h
compiler/mlir/lib/Conversion/: HirToMLIR.cpp  LowerToLLVM.cpp  PassPipeline.cpp  QFXToAffine.cpp
compiler/mlir/lib/Dialect/: QFXDialect.cpp
compiler/mlir/lib/Transforms/: LoopTiling.cpp  PrefetchInsertion.cpp  SlidingWindowUpdate.cpp  VectorizeLoops.cpp  WindowFusion.cpp
docs/: dsl_spec.md  mlir_dialect.md  optimization_passes.md  performance.md  testing_guide.md  testing_instructions.md  tuner_design.md
examples/: bollinger_signal.qfx  corr_matrix.qfx  pairs_spread.qfx  volatility_surface.qfx  vwap_signal.qfx
runtime/: CMakeLists.txt
runtime/cpu_rt/: StreamingRuntime.cpp  StreamingRuntime.h
runtime/gpu_rt/: CudaGraphRuntime.cpp  CudaGraphRuntime.h  cuda_launch.h
scripts/: generate_lobster.py  setup-deps.sh
tests/: run_correctness.py
tools/: CMakeLists.txt
tools/quantfx-compiler/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  main.cpp
tuner/: CMakeLists.txt  __init__.py  cache_db.py  chromosome.py  fitness.py  harness.cpp  harness.py  pareto.py  search.py
